<resources>
    <string name="app_name">COVID19 India</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">News</string>
    <string name="title_notifications">Helpline</string>
    <string name="title_guides">Guides</string>
    <string name="title_statewise">State Stats</string>
    <string name="prediction"><u>Predicted Infection rate</u></string>
    <string name="the_helpline_number_for_corona_virus_91_11_23978046_toll_free_no_1075">The Helpline Number for corona–virus : +91–11–23978046 Toll Free No: 1075</string>
    <string name="about">About</string>
    <string name="pawan0411"><u>Pawan0411</u></string>
    <string name="speedx"><u>SpeedX</u></string>
    <string name="update">Update Available:<u>\nhttp://tiny.cc/covid-19india</u></string>
    <string name="update2"><u>https://github.com/Pawan0411/Covid-19/releases</u></string>
    <string name="this_app_is_about_updates_related_to_coronavirus_in_india">v1.7\nThis app is about updates related to coronavirus in India. \n
                    All data are fetched from Ministry of Health and Family Welfare website.</string>
    <string name="recoverd">Recovered</string>
    <string name="title_heatmap">Heat Map</string>
    <string name="try_out_new_heat_map"><u>Try out new Heat Map!</u></string>
    <string name="click_here_to_know_district_wise_stats"><u>Click here to know District wise stats</u></string>
</resources>
