<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="india.coronavirus.fight.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="india.coronavirus.fight.ui.news.NewsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_statewise"
        android:name="india.coronavirus.fight.ui.statewise.StateFragment"
        android:label="@string/title_statewise"
        tools:layout="@layout/fragment_statewise" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="india.coronavirus.fight.ui.helpline.HelplineFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_helpline" />

    <fragment
        android:id="@+id/navigation_guides"
        android:name="india.coronavirus.fight.ui.guides.GuideFragment"
        android:label="@string/title_guides"
        tools:layout="@layout/fragment_guide" />
</navigation>
